@@ -1,3 +1,7 @@
+Sat  May 21 2005	H. Wade Minter (minter@lunenburg.org)
+     * Stop trying to be smarter than XMLRPC::Lite and allow it to handle
+       encoding and decoding binary files.
+
 Tue  May 10 2005	H. Wade Minter (minter@lunenburg.org)
      * Remove the plugin stuff until 2.2.
 
